Updated with Autoprefixer

--- a/assets/admin/css/style.css
+++ b/assets/admin/css/style.css
@@ -56,13 +56,17 @@
 	font-size: 14px;
 	margin: 2rem auto 0.3125rem;
 	padding: .5rem 1.5rem 2.2rem;
-	flex-shrink: 0;
+	-ms-flex-negative: 0;
+	    flex-shrink: 0;
 	background: #666EE8;
 	border-color: #333BB5 #1A229C #1A229C;
-	box-shadow: 0 1px 0 #1A229C;
+	-webkit-box-shadow: 0 1px 0 #1A229C;
+	        box-shadow: 0 1px 0 #1A229C;
 	color: #fff;
 	text-decoration: none;
 	text-shadow: 0 -1px 1px #1A229C,1px 0 1px #1A229C,0 1px 1px #1A229C,-1px 0 1px #1A229C;
+	-webkit-transition: background .3s ease;
+	-o-transition: background .3s ease;
 	transition: background .3s ease;
 }
 #conj-lite-upsell-banner__message--inner .conj-lite-upsell-banner__message--inner-col1 .button-primary:hover {
