--- a/woocommerce.css
+++ b/woocommerce.css
@@ -206,6 +206,7 @@ form.woocommerce-ResetPassword button,
 #customer_login .woocommerce-LostPassword {
 	font-size: 15px;
 }
+.woocommerce-store-notice,
 .widget_price_filter .price_label .from,
 .widget_price_filter .price_label .to,
 .woocommerce-checkout-payment,
@@ -471,6 +472,9 @@ body .woocommerce-customer-details address {
 @media (min-width: 37.5625em) {
 	.woocommerce-order-received .woocommerce-order > p:not(.woocommerce-thankyou-order-received) {
 		font-size: 16px;
+	}
+	.demo_store:before {
+		line-height: 1.3;
 	}
 }
 @media (min-width: 48.0625em) {
@@ -2144,7 +2148,7 @@ ul.woocommerce-error {
 	.woocommerce-message .button, 
 	.woocommerce-info .button {
 		padding: 14px 20px 14px 20px;
-		margin: -14px -20px -14px 20px;
+		margin: -14px -20px -14px auto;
 		max-height: 100%;
 		align-items: center;
 		order: 5;
@@ -2178,6 +2182,8 @@ ul.woocommerce-error {
 	}
 }
 @media (max-width: 37.5em) {
+	body.conj-customizer .woocommerce-store-notice, 
+	body.conj-customizer p.demo_store,
 	.woocommerce-message, 
 	.woocommerce-info, 
 	.woocommerce-error, 
