--- a/woocommerce.css
+++ b/woocommerce.css
@@ -590,6 +590,8 @@ body .woocommerce-customer-details address {
 /*--------------------------------------------------------------
 # Accessibility
 --------------------------------------------------------------*/
+.wc-block-featured-product__price .price-label,
+.woocommerce-checkout .woocommerce-additional-fields > h3,
 .site-header-cart .widgettitle,
 .single-product div.product .entry-summary .price-label,
 .search-results:not(.post-type-archive) .site-main article.type-product .price-label,
@@ -897,11 +899,11 @@ ul.products li.product .woocommerce-loop-product__link {
 ul.products li.product .price {
 	margin-top: auto;
 }
-@media (min-width: 60.0625em) {
-	[class*="wp-block-woocommerce-"].is-hidden-rating ul.products li.product .added_to_cart,
-	[class*="wp-block-woocommerce-"].is-hidden-rating ul.products li.product .button {
-		right: 20px;
-	}
+[class*="wp-block-woocommerce-"].is-hidden-rating ul.products li.product .added_to_cart,
+[class*="wp-block-woocommerce-"].is-hidden-rating ul.products li.product .button {
+	left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
 }
 @media (max-width: 60em) {
 	ul.products li.product .added_to_cart,
@@ -909,10 +911,6 @@ ul.products li.product .price {
 		right: 70px;
 		width: 27px;
 		height: 27px;
-	}
-	[class*="wp-block-woocommerce-"].is-hidden-rating ul.products li.product .added_to_cart,
-	[class*="wp-block-woocommerce-"].is-hidden-rating ul.products li.product .button {
-		right: 20px;
 	}
 	ul.products li.product:not(.product-category) {
 		padding-bottom: 62px;
