--- a/assets/admin/css/legacy/editor-style.css
+++ b/assets/admin/css/legacy/editor-style.css
@@ -2,33 +2,17 @@
  * The Classic Editor support has been deprecated and may be removed from future releases.
  *
  * @package     conj-lite
- * @author      MyPreview (Github: @mypreview, @gookalani)
+ * @author      MyPreview (Github: @mahdiyazdani, @mypreview, @gookalani)
  */
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
-# Feather
 # Typography
 # Body
 # Elements
 # Media
 # Captions
 --------------------------------------------------------------*/
-
-/*--------------------------------------------------------------
-# Feather
---------------------------------------------------------------*/
-@font-face {
-	font-family: 'Feather';
-	src: url('../../../fonts/Feather.eot?6foe8l');
-	src: url('../../../fonts/Feather.eot?6foe8l#iefix') format('embedded-opentype'),
-    url('../../../fonts/Feather.ttf?6foe8l') format('truetype'),
-    url('../../../fonts/Feather.woff?6foe8l') format('woff'),
-    url('../../../fonts/Feather.svg?6foe8l#Feather') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
@@ -273,15 +257,12 @@ cite:before {
 		margin-left: 0.7em;
 	}
 }
-
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
 embed, iframe, object {
 	max-width: 100%;
 }
-
-
 /*--------------------------------------------------------------
 ## Captions
 --------------------------------------------------------------*/
